nesc-frontend/src/test/resources/integration/programs/bad/bad33/C.nc
/* Task that is declared but not implemented. */

configuration C
{
}
implementation
{
   components M;
}
